CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04yxt1z-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytqpj-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytqpj-develop
NuGet:CK.Testing.AppIdentity/0.0.0--04ytqpn-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04yxt21-develop
NuGet:CK.AppIdentity/0.0.0--04ytqpn-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04yxs3u-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04yxt21-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04yxt21-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04yxs3u-develop
NuGet:CK.StObj.TypeScript/0.0.0--04yxt21-develop
NuGet:CK.AspNet.Auth/0.0.0--04yxt1z-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04yxt21-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04yxs3u-develop
NuGet:CK.CodeGen/0.0.0--04ytqpl-develop
NuGet:CK.StObj.Runtime/0.0.0--04yxs3u-develop
NuGet:CK.PerfectEvent/0.0.0--04ytqpl-develop
NuGet:CK.Globalization/0.0.0--04ytqpo-develop
NuGet:CK.StObj.Model/0.0.0--04yxs3u-develop
NuGet:CK.Auth.Abstractions/0.0.0--04ytqpj-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04yxs3u-develop.

--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -4,6 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.Globalization" Version="0.0.0--04ytqpo-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04yvzzy-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04yxs3u-develop" />
   </ItemGroup>
 </Project>
