--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04yy0m2-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04yy0m2-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--04yy55m-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04yy55n-develop" />
   </ItemGroup>
 </Project>
