CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04yzyky-develop
NuGet:CK.Auth.Abstractions/0.0.0--04yy55g-develop
NuGet:CK.Auth.Abstractions/0.0.0--04yy55g-develop
NuGet:CK.Testing.AppIdentity/0.0.0--04yy55l-develop
NuGet:CK.AppIdentity/0.0.0--04yy55l-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04yy55n-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04yzykz-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04yy55n-develop
NuGet:CK.StObj.TypeScript/0.0.0--04yzykz-develop
NuGet:CK.AspNet.Auth/0.0.0--04yzyky-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04yzykz-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04yy55n-develop
NuGet:CK.CodeGen/0.0.0--04yy55j-develop
NuGet:CK.StObj.Runtime/0.0.0--04yy55n-develop
NuGet:CK.PerfectEvent/0.0.0--04yy55k-develop
NuGet:CK.Globalization/0.0.0--04yy55m-develop
NuGet:CK.StObj.Model/0.0.0--04yy55n-develop
NuGet:CK.Auth.Abstractions/0.0.0--04yy55g-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04yy55n-develop.

--- a/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
+++ b/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--04yznbv-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--04yzykz-develop" />
     <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04yznbv-develop" />
   </ItemGroup>
   <ItemGroup>
