CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04z7c0l-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.AppIdentity/0.0.0--04z7c05-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04z7c0l-develop
NuGet:CK.AppIdentity/0.0.0--04z7c05-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04z7c07-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04z7c0p-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04z7c0l-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04z7c07-develop
NuGet:CK.StObj.TypeScript/0.0.0--04z7c0p-develop
NuGet:CK.AspNet.Auth/0.0.0--04z7c0l-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04z7c0p-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04z7c07-develop
NuGet:CK.CodeGen/0.0.0--04z7c03-develop
NuGet:CK.StObj.Runtime/0.0.0--04z7c07-develop
NuGet:CK.PerfectEvent/0.0.0--04z7c03-develop
NuGet:CK.Globalization/0.0.0--04z7c06-develop
NuGet:CK.StObj.Model/0.0.0--04z7c07-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04z7c07-develop.

--- a/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
+++ b/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
@@ -4,7 +4,7 @@
     <Description>Implements IBasicLoginCommand, IRefreshAuthenticationCommand and ILogoutCommand using the WebFrontAuthService.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="0.0.0--04z1nqv-develop" />
+    <PackageReference Include="CK.AspNet.Auth" Version="0.0.0--04z7c0l-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
