--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04yy55l-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04yy55n-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04z7c05-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04z7c07-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
