--- a/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
+++ b/Tests/CK.Cris.Executor.Tests/CK.Cris.Executor.Tests.csproj
@@ -4,8 +4,8 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04yy55g-develop" />
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04yy55n-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="0.0.0--04z7c00-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04z7c07-develop" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
