--- a/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
+++ b/CK.Cris.AspNet.Auth.Basic/CK.Cris.AspNet.Auth.Basic.csproj
@@ -4,7 +4,7 @@
     <Description>Implements IBasicLoginCommand, IRefreshAuthenticationCommand and ILogoutCommand using the WebFrontAuthService.</Description>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AspNet.Auth" Version="0.0.0--04z92g4-develop" />
+    <PackageReference Include="CK.AspNet.Auth" Version="0.0.0--04z94fh-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
