CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zb0m9-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zb0m9-develop
NuGet:CK.AppIdentity/0.0.0--04z94ev-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zaz0j-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zb0ma-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zb0m9-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zaz0j-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zb0ma-develop
NuGet:CK.AspNet.Auth/0.0.0--04zb0m9-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zb0ma-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zaz0j-develop
NuGet:CK.CodeGen/0.0.0--04z92fl-develop
NuGet:CK.StObj.Runtime/0.0.0--04zaz0j-develop
NuGet:CK.PerfectEvent/0.0.0--04z92fm-develop
NuGet:CK.Globalization/0.0.0--04z92fo-develop
NuGet:CK.StObj.Model/0.0.0--04zaz0j-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zaz0j-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.CodeGen" Version="0.0.0--04z92fl-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04z94fe-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zaz0j-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
