CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zc9ln-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zc9ln-develop
NuGet:CK.AppIdentity/0.0.0--04zc9l8-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zc9l9-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zc9lr-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zc9ln-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zc9l9-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zc9lr-develop
NuGet:CK.AspNet.Auth/0.0.0--04zc9ln-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zc9lr-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zc9l9-develop
NuGet:CK.CodeGen/0.0.0--04zc9l5-develop
NuGet:CK.StObj.Runtime/0.0.0--04zc9l9-develop
NuGet:CK.PerfectEvent/0.0.0--04zc9l6-develop
NuGet:CK.Globalization/0.0.0--04zc9l9-develop
NuGet:CK.StObj.Model/0.0.0--04zc9l9-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zc9l9-develop.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04z94ev-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zaz0j-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zc9l8-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zc9l9-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
