--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.CodeGen" Version="0.0.0--04zc9l5-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zc9l9-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zca76-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
