CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zcmki-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zcmki-develop
NuGet:CK.AppIdentity/0.0.0--04zcmkb-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zcmkc-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zcmkj-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zcmki-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zcmkc-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zcmkj-develop
NuGet:CK.AspNet.Auth/0.0.0--04zcmki-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zcmkj-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zcmkc-develop
NuGet:CK.CodeGen/0.0.0--04zcmka-develop
NuGet:CK.StObj.Runtime/0.0.0--04zcmkc-develop
NuGet:CK.PerfectEvent/0.0.0--04zcmka-develop
NuGet:CK.Globalization/0.0.0--04zcmkb-develop
NuGet:CK.StObj.Model/0.0.0--04zcmkc-develop
NuGet:CK.Auth.Abstractions/0.0.0--04z7c00-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zcmkc-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -5,8 +5,8 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.CodeGen" Version="0.0.0--04zc9l5-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zcadf-develop" />
+    <PackageReference Include="CK.CodeGen" Version="0.0.0--04zcmka-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zcmkc-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
