CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zdxqb-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zdxqb-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.AppIdentity/0.0.0--04zdxq0-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zdxq1-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zdxqg-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zdxqb-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zdxq1-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zdxqg-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zdxqb-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zdxqg-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zdxq1-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.CodeGen/0.0.0--04zdxpy-develop
NuGet:CK.StObj.Runtime/0.0.0--04zdxq1-develop
NuGet:CK.PerfectEvent/0.0.0--04zdxpy-develop
NuGet:CK.Globalization/0.0.0--04zdxq0-develop
NuGet:CK.StObj.Model/0.0.0--04zdxq1-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zdxq1-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zcmkb-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zcmkc-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zdxq0-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zdxq1-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
