--- a/CK.Cris.AspNet.Engine/CK.Cris.AspNet.Engine.csproj
+++ b/CK.Cris.AspNet.Engine/CK.Cris.AspNet.Engine.csproj
@@ -12,7 +12,7 @@
           - the TypeScriptAspect is declared and one or more <TypeScript><OutuptPath>...</OutuptPath></TypeScript> is defined in the BinPathConfiguration.
           - AND the CK.Cris.TypeScript must be referenced.
     -->
-    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.0.0--04zcqoi-develop" />
+    <PackageReference Include="CK.StObj.TypeScript.Engine" Version="0.0.0--04zdxqg-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet\CK.Cris.AspNet.csproj" />
