--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -5,12 +5,12 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zcmka-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zdxpx-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zcqnv-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zdxqb-develop" />
     <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
   </ItemGroup>
   <ItemGroup>
