CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zedjw-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zedjw-develop
NuGet:CK.AppIdentity/0.0.0--04zdxq0-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zed07-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zedjz-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zedjw-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zed07-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zedjz-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zedjw-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zedjz-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zed07-develop
NuGet:CK.CodeGen/0.0.0--04zdxpy-develop
NuGet:CK.StObj.Runtime/0.0.0--04zed07-develop
NuGet:CK.PerfectEvent/0.0.0--04zdxpy-develop
NuGet:CK.Globalization/0.0.0--04zdxq0-develop
NuGet:CK.StObj.Model/0.0.0--04zed07-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zed07-develop.

--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04ze4y7-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zedjw-develop" />
     <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
   </ItemGroup>
   <ItemGroup>
