CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zhooz-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zhooz-develop
NuGet:CK.AppIdentity/0.0.0--04zdxq0-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zed07-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zhop1-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zhooz-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zed07-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zhop1-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zhooz-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zhop1-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zed07-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop
NuGet:CK.CodeGen/0.0.0--04zdxpy-develop
NuGet:CK.StObj.Runtime/0.0.0--04zed07-develop
NuGet:CK.PerfectEvent/0.0.0--04zdxpy-develop
NuGet:CK.Globalization/0.0.0--04zdxq0-develop
NuGet:CK.StObj.Model/0.0.0--04zed07-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zdxpx-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zed07-develop
NuGet:CK.Testing.Nunit/0.0.0--04zdxpx-develop.

--- a/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
+++ b/CK.Testing.CrisAspNetEngine/CK.Testing.CrisAspNetEngine.csproj
@@ -3,8 +3,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--04zedjz-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zedjw-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--04zhop1-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zhooz-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet.Auth.Basic\CK.Cris.AspNet.Auth.Basic.csproj" />
