--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zedjw-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zhooz-develop" />
     <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
   </ItemGroup>
   <ItemGroup>
