CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zi8xk-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zi8x2-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zi8x2-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zi8xk-develop
NuGet:CK.AppIdentity/0.0.0--04zi8x4-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zi8x6-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zi8xk-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zi8xn-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zi8x6-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zi8xn-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zi8xk-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zi8xn-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zi8x6-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.CodeGen/0.0.0--04zi8x2-develop
NuGet:CK.StObj.Runtime/0.0.0--04zi8x6-develop
NuGet:CK.PerfectEvent/0.0.0--04zi8x3-develop
NuGet:CK.Globalization/0.0.0--04zi8x5-develop
NuGet:CK.StObj.Model/0.0.0--04zi8x6-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zi8x2-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zi8x6-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop.

--- a/CK.Cris.Executor/CK.Cris.Executor.csproj
+++ b/CK.Cris.Executor/CK.Cris.Executor.csproj
@@ -4,7 +4,7 @@
     <RootNamespace>CK.Cris</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04zdxpy-develop" />
+    <PackageReference Include="CK.PerfectEvent" Version="0.0.0--04zi8x3-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
