--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -5,13 +5,14 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zi8x1-develop" />
+    <PackageReference Include="CK.Testing.NUnit" Version="0.0.0--04zi8x1-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04zi8x6-develop" />
     <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zi8xk-develop" />
-    <ProjectReference Include="..\..\CK.Testing.CrisAspNetEngine\CK.Testing.CrisAspNetEngine.csproj" />
+    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--04zi8x4-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
