CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zk4sq-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zi8x2-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zi8x2-develop
NuGet:CK.Testing.NUnit/0.0.0--04zi8x1-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zk0w8-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zk4sq-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--04zif5w-develop
NuGet:CK.AppIdentity/0.0.0--04zif5w-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zk0w8-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zk0w8-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zk4ss-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zk0w8-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zk4ss-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zk4sq-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zk4ss-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zk0w8-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop
NuGet:CK.CodeGen/0.0.0--04zi8x2-develop
NuGet:CK.StObj.Runtime/0.0.0--04zk0w8-develop
NuGet:CK.PerfectEvent/0.0.0--04zi8x3-develop
NuGet:CK.Globalization/0.0.0--04zi8x5-develop
NuGet:CK.StObj.Model/0.0.0--04zk0w8-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zi8x2-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zk0w8-develop
NuGet:CK.Testing.Nunit/0.0.0--04zi8x1-develop.

--- a/CK.Cris.Engine/CK.Cris.Engine.csproj
+++ b/CK.Cris.Engine/CK.Cris.Engine.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CK.CodeGen" Version="0.0.0--04zi8x2-develop" />
-    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zijuh-develop" />
+    <PackageReference Include="CK.StObj.Runtime" Version="0.0.0--04zk0w8-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
