CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--04zrd9o-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zrd96-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zrd96-develop
NuGet:CK.Testing.NUnit/0.0.0--04zrd95-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zrd9b-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zrd9o-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--04zrd9a-develop
NuGet:CK.AppIdentity/0.0.0--04zrd9a-develop
NuGet:CK.Poco.Exc.Json/0.0.0--04zrd9b-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zrd9b-develop
NuGet:CK.Testing.Nunit/0.0.0--04zrd95-develop
NuGet:CK.StObj.TypeScript/0.0.0--04zrd9r-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zrd9b-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--04zrd9r-develop
NuGet:CK.Testing.Nunit/0.0.0--04zrd95-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--04zrd9o-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--04zrd9r-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zrd9b-develop
NuGet:CK.Testing.Nunit/0.0.0--04zrd95-develop
NuGet:CK.CodeGen/0.0.0--04zrd97-develop
NuGet:CK.StObj.Runtime/0.0.0--04zrd9b-develop
NuGet:CK.PerfectEvent/0.0.0--04zrd97-develop
NuGet:CK.Globalization/0.0.0--04zrd9b-develop
NuGet:CK.StObj.Model/0.0.0--04zrd9b-develop
NuGet:CK.Auth.Abstractions/0.0.0--04zrd96-develop
NuGet:CK.Testing.StObjEngine/0.0.0--04zrd9b-develop
NuGet:CK.Testing.Nunit/0.0.0--04zrd95-develop.

--- a/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
+++ b/Tests/CK.Cris.AspNet.Tests/CK.Cris.AspNet.Tests.csproj
@@ -8,13 +8,13 @@
     <Compile Include="..\CK.Cris.Tests\DiamondResultAndCommand.cs" Link="DiamondResultAndCommand.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04zk0w8-develop" />
-    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--04zlofw-develop" />
-    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zi8x1-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04zrd9b-develop" />
+    <PackageReference Include="CK.Testing.StObjTypeScriptEngine" Version="0.0.0--04zrd9r-develop" />
+    <PackageReference Include="CK.Testing.Nunit" Version="0.0.0--04zrd95-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <!-- We also test CK.Auth.Cris here. -->
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zk4sq-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zrd9o-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.Auth\CK.Cris.Auth.csproj" />
