--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zif5w-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zk0w8-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zrd9a-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zrd9b-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
