CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/23.0.2--0001-develop
NuGet:CK.Auth.Abstractions/7.0.1--0004-develop
NuGet:CK.Auth.Abstractions/7.0.1--0004-develop
NuGet:CK.Testing.AppIdentity/0.5.1--0004-develop
NuGet:CK.Testing.AspNetServer.Auth/0.19.2--0001-develop
NuGet:CK.AppIdentity/0.5.1--0004-develop
NuGet:CK.Poco.Exc.Json/26.0.2--0001-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.19.2--0001-develop
NuGet:CK.Testing.AspNetServer.Auth/0.19.2--0001-develop
NuGet:CK.Testing.StObjEngine/26.0.2--0001-develop
NuGet:CK.StObj.TypeScript/0.19.2--0001-develop
NuGet:CK.AspNet.Tester/4.0.5--0001-develop
NuGet:CK.AspNet.Auth/23.0.2--0001-develop
NuGet:CK.StObj.TypeScript.Engine/0.19.2--0001-develop
NuGet:CK.Testing.StObjEngine/26.0.2--0001-develop
NuGet:CK.CodeGen/10.0.1--0004-develop
NuGet:CK.StObj.Runtime/26.0.2--0001-develop
NuGet:CK.PerfectEvent/22.0.1--0004-develop
NuGet:CK.Globalization/0.7.1--0004-develop
NuGet:CK.StObj.Model/26.0.2--0001-develop
NuGet:CK.Auth.Abstractions/7.0.1--0004-develop
NuGet:CK.Testing.StObjEngine/26.0.2--0001-develop.

--- a/Tests/CK.Cris.BackgroundExecutor.Tests/CK.Cris.BackgroundExecutor.Tests.csproj
+++ b/Tests/CK.Cris.BackgroundExecutor.Tests/CK.Cris.BackgroundExecutor.Tests.csproj
@@ -4,7 +4,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="26.0.1" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="26.0.2--0001-develop" />
     <PackageReference Include="NUnit" Version="4.1.0" />
     <PackageReference Include="NUnit3TestAdapter" PrivateAssets="all" Version="4.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
