Releasing 0.32.2. Upgrading release dependencies: NuGet:CK.AspNet.Auth/23.0.2, NuGet:CK.Auth.Abstractions/7.0.1, NuGet:CK.Auth.Abstractions/7.0.1, NuGet:CK.Testing.AppIdentity/0.5.1, NuGet:CK.Testing.AspNetServer.Auth/0.19.2, NuGet:CK.AppIdentity/0.5.1, NuGet:CK.Poco.Exc.Json/26.0.2, NuGet:CK.Testing.StObjTypeScriptEngine/0.19.2, NuGet:CK.Testing.AspNetServer.Auth/0.19.2, NuGet:CK.Testing.StObjEngine/26.0.2, NuGet:CK.StObj.TypeScript/0.19.2, NuGet:CK.AspNet.Tester/4.0.4, NuGet:CK.AspNet.Auth/23.0.2, NuGet:CK.StObj.TypeScript.Engine/0.19.2, NuGet:CK.Testing.StObjEngine/26.0.2, NuGet:CK.CodeGen/10.0.1, NuGet:CK.StObj.Runtime/26.0.2, NuGet:CK.PerfectEvent/22.0.1, NuGet:CK.Globalization/0.7.1, NuGet:CK.StObj.Model/26.0.2, NuGet:CK.Auth.Abstractions/7.0.1, NuGet:CK.Testing.StObjEngine/26.0.2.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.5.1--0004-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="26.0.2--0001-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.5.1" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="26.0.2" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
