--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.7.1--0004-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="26.0.2--0001-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.7.1" />
+    <PackageReference Include="CK.StObj.Model" Version="26.0.2" />
   </ItemGroup>
 </Project>
