--- a/CK.IO.Auth/CK.IO.Auth.csproj
+++ b/CK.IO.Auth/CK.IO.Auth.csproj
@@ -5,6 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris\CK.Cris.csproj" />
-    <PackageReference Include="CK.Auth.Abstractions" Version="7.0.1--0004-develop" />
+    <PackageReference Include="CK.Auth.Abstractions" Version="7.0.1" />
   </ItemGroup>
 </Project>
