CI build: Upgrading dependencies:
NuGet:CK.AspNet.Auth/0.0.0--052zkuu-develop
NuGet:CK.Auth.Abstractions/0.0.0--052zkui-develop
NuGet:CK.Auth.Abstractions/0.0.0--052zkui-develop
NuGet:CK.Testing.NUnit/0.0.0--052zkui-develop
NuGet:CK.Testing.StObjEngine/0.0.0--052zkum-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--052zkuu-develop
NuGet:CK.AppIdentity.Hosting/0.0.0--052zkuk-develop
NuGet:CK.AppIdentity/0.0.0--052zkuk-develop
NuGet:CK.Poco.Exc.Json/0.0.0--052zkum-develop
NuGet:CK.Testing.StObjEngine/0.0.0--052zkum-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.StObj.TypeScript/0.0.0--052zkuw-develop
NuGet:CK.Testing.StObjEngine/0.0.0--052zkum-develop
NuGet:CK.Testing.StObjTypeScriptEngine/0.0.0--052zkuw-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.Testing.AspNetServer.Auth/0.0.0--052zkuu-develop
NuGet:CK.StObj.TypeScript.Engine/0.0.0--052zkuw-develop
NuGet:CK.Testing.StObjEngine/0.0.0--052zkum-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop
NuGet:CK.CodeGen/0.0.0--052zkuj-develop
NuGet:CK.StObj.Runtime/0.0.0--052zkum-develop
NuGet:CK.PerfectEvent/0.0.0--052zkuj-develop
NuGet:CK.Globalization/0.0.0--052zkul-develop
NuGet:CK.StObj.Model/0.0.0--052zkum-develop
NuGet:CK.Auth.Abstractions/0.0.0--052zkui-develop
NuGet:CK.Testing.StObjEngine/0.0.0--052zkum-develop
NuGet:CK.Testing.Nunit/0.0.0--052zkui-develop.

--- a/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
+++ b/CK.Cris.HttpSender/CK.Cris.HttpSender.csproj
@@ -4,8 +4,8 @@
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.AppIdentity" Version="0.0.0--04zrd9a-develop" />
-    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--04zrd9b-develop" />
+    <PackageReference Include="CK.AppIdentity" Version="0.0.0--052zkuk-develop" />
+    <PackageReference Include="CK.Poco.Exc.Json" Version="0.0.0--052zkum-develop" />
     <PackageReference Include="Polly.Core" Version="8.0.0" />
   </ItemGroup>
   <ItemGroup>
