--- a/CK.Cris/CK.Cris.csproj
+++ b/CK.Cris/CK.Cris.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Globalization" Version="0.0.0--04zrd9b-develop" />
-    <PackageReference Include="CK.StObj.Model" Version="0.0.0--04zrd9b-develop" />
+    <PackageReference Include="CK.Globalization" Version="0.0.0--052zkul-develop" />
+    <PackageReference Include="CK.StObj.Model" Version="0.0.0--052zkum-develop" />
   </ItemGroup>
 </Project>
