--- a/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
+++ b/Tests/CK.Cris.HttpSender.Tests/CK.Cris.HttpSender.Tests.csproj
@@ -5,14 +5,14 @@
     <LangVersion>11</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.NUnit" Version="0.0.0--04zrd95-develop" />
+    <PackageReference Include="CK.Testing.NUnit" Version="0.0.0--052zkui-develop" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--04zrd9b-develop" />
-    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--04zrd9o-develop" />
-    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--04zrd9a-develop" />
+    <PackageReference Include="CK.Testing.StObjEngine" Version="0.0.0--052zkum-develop" />
+    <PackageReference Include="CK.Testing.AspNetServer.Auth" Version="0.0.0--052zkuu-develop" />
+    <PackageReference Include="CK.AppIdentity.Hosting" Version="0.0.0--052zkuk-develop" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\CK.Cris.AspNet.Engine\CK.Cris.AspNet.Engine.csproj" />
