AspNet engine requires the Executor engine.

--- a/CK.Cris.AspNet.Engine/CK.Cris.AspNet.Engine.csproj
+++ b/CK.Cris.AspNet.Engine/CK.Cris.AspNet.Engine.csproj
@@ -16,6 +16,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CK.Cris.AspNet\CK.Cris.AspNet.csproj" />
-    <ProjectReference Include="..\CK.Cris.Engine\CK.Cris.Engine.csproj" />
+    <ProjectReference Include="..\CK.Cris.Executor.Engine\CK.Cris.Executor.Engine.csproj" />
   </ItemGroup>
 </Project>
